# Hermes-Shadow-Stats

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: design.md  plugin-prototype.md  release-checklist.md  textual-ansi-spike.md  theme-port.md
examples/: README.md
examples/demo-hermes-home/cron/: jobs.json
examples/demo-hermes-home/memories/: MEMORY.md  USER.md
examples/demo-hermes-home/plugins/shadow/: __init__.py  plugin.yaml
examples/demo-hermes-home/sessions/: 2026-04-15-demo.json
hermes_plugin/: __init__.py  plugin.yaml
scripts/: export_preview.sh  generate_example_outputs.sh  render_readme_preview.py  spike_textual_ansi.py
src/hermes_shadow_stats/: __init__.py  cli.py  i18n.py  models.py  renderer.py  scanner.py  state_db.py  stats.py
src/hermes_shadow_stats/tui/: __init__.py  app.py  keymap.py  themes.py
src/hermes_shadow_stats/tui/widgets/: __init__.py  detail.py  help_overlay.py
tests/: _fixtures.py  test_data_acquisition_perf.py  test_i18n_tui_completeness.py  test_refresh_perf.py  test_renderer_parity.py  test_renderer_per_tab.py  test_security_escape_stripping.py  test_shadow_stats.py  test_state_db.py  test_state_db_perf.py  test_tab_output_fallback.py  test_tab_output_telemetry.py  test_theme_parity.py
tests/fixtures/renderer_parity/: compact_en.ansi  default_en.ansi  default_en.json  default_en.md  default_zh.ansi  minimal_en.ansi
tests/fixtures/tab_output/fallback/: chronicle_en.ansi  chronicle_zh_TW.ansi  codex_en.ansi  (+10 more)
tests/tui/: test_app_basic.py  test_navigation.py
(+16 files in other folders)
