[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-shadow-stats"
version = "0.1.0"
description = "RPG-style status panel generator for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "EndeavorYen" }
]
dependencies = [
  "textual>=0.80,<2.0",
]

[project.scripts]
hermes-shadow-stats = "hermes_shadow_stats.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance/benchmark test (opt-in, run with -m benchmark)",
]
addopts = "-m 'not benchmark'"
